--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "bcryptjs": "^3.0.2",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sharp": "^0.33.5",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.1"
   },
   "devDependencies": {
     "prisma": "^6.16.2"
