--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "seed:admins": "node scripts/seed-admins.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^39.0.1",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sharp": "^0.33.5",
-    "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@ckeditor/ckeditor5-build-classic": "^39.0.1"
+    "sanitize-html": "^2.17.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "prisma": "^6.16.2"
