--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "next": "^14.2.6",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanitize-html": "^2.17.0",
